Fix for dynamic view height on mobile

--- a/docs/css/cart.css
+++ b/docs/css/cart.css
@@ -2,7 +2,7 @@ body {
     /* Ripped off from GitHub */
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
     margin: 0.75rem 1.5rem 1rem 1.5rem;
-    height: calc(100vh - 2rem);
+    height: calc(100dvh - 2rem);
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -25,7 +25,7 @@ p {
     display: flex;
     flex-direction: column;
     height: 100%;
-    max-height: calc(100vh - 4rem);
+    max-height: calc(100dvh - 4rem);
     width: calc(min(340px, 100vw - 3rem));
     justify-content: space-between;
     margin: 0 auto;
